# shieldex

./: .gitignore  Cargo.toml  POLICY_SCHEMA.md  README.md  config.json  spend-log.json
cli/coinutils/: Cargo.toml
contracts/agent-wallet/: Cargo.toml
contracts/agent-wallet/src/: lib.rs  test.rs
contracts/privacy-pool/: Cargo.toml
contracts/privacy-pool/src/: lib.rs
demo-app/: .env.example  README.md  next.config.ts  package.json  tailwind.config.ts
demo-app/app/: globals.css  layout.tsx  page.tsx
demo-app/app/api/plan/: route.ts
demo-app/app/api/shieldex/pay/: route.ts
demo-app/app/api/shieldex/status/: route.ts
demo-app/app/api/shieldex/status/balance/: route.ts
demo-app/app/plan/: PlanDashboard.tsx  page.tsx
demo-app/components/: DemoControls.tsx  PaymentFeed.tsx  PolicyPanel.tsx  PrivacyPanel.tsx
demo-app/lib/: api.ts  soroban.ts
docs/: DEMO_GUIDE.md  PITCH_DECK.md  RAGEQUIT.md  TEST_SCENARIOS.md
middleware/: .env.example  .gitignore  API.md  config.json  package-lock.json  package.json
middleware/src/: index.ts  logger.ts  policy.ts  spendTracker.ts  stellar.ts  types.ts
middleware/src/routes/: pay.ts  status.ts
scripts/: test-contracts.sh
